--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint **/*.js",
-    "start": "node server.js",
+    "start": "node index.js",
     "jsdoc": "jsdoc -c ./docs/config/jsdoc.config.json ."
   },
   "repository": {
@@ -23,6 +23,7 @@
     "@nmq/q": "^1.0.3",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
+    "express": "^4.17.1",
     "jest": "^24.8.0",
     "jsdoc": "^3.6.2",
     "socket.io": "^2.2.0",
