--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint **/*.js",
+    "lint": "eslint index.js api.js ./__tests__",
     "start": "node index.js",
     "jsdoc": "jsdoc -c ./docs/config/jsdoc.config.json ."
   },
